src/Standard/Standard_WarningsDisable.hxx
@@ -31,6 +31,7 @@
   #pragma clang diagnostic push
   #pragma clang diagnostic ignored "-Wall"
   #pragma clang diagnostic ignored "-Wextra"
+  #pragma clang diagnostic ignored "-Wshorten-64-to-32"
 #elif defined(_MSC_VER)
   #pragma warning(push, 0)
 #elif defined(__GNUC__) && (__GNUC__ > 4 || (__GNUC__ == 4 && __GNUC_MINOR__ >= 6))
